--- a/src/styles/core/mixins.less
+++ b/src/styles/core/mixins.less
@@ -130,21 +130,20 @@
     &:before {
         content: '';
         position: absolute;
-        left: 0;
+        left: 16px;
         top: 0;
         bottom: auto;
         right: auto;
         height: 1px;
-        width: 100%;
+        width: e("calc(100% - 32px)");
         background-color: @color;
         display: block;
         z-index: 15;
         .transform-origin(50% 0%);
-        .transform(scaleY(0.5));
-        html.pixel-ratio-2 &{
+        .pixel-ratio-2 &{
             .transform(scaleY(0.5));
         }
-        html.pixel-ratio-3 &{
+        .pixel-ratio-3 &{
             .transform(scaleY(0.33));
         }
     }
@@ -163,10 +162,10 @@
         display: block;
         z-index: 15;
         .transform-origin(0% 50%);
-        html.pixel-ratio-2 &{
+        .pixel-ratio-2 &{
             .transform(scaleX(0.5));
         }
-        html.pixel-ratio-3 &{
+        .pixel-ratio-3 &{
             .transform(scaleX(0.33));
         }
     }
@@ -175,21 +174,20 @@
     &:after {
         content: '';
         position: absolute;
-        left: 0;
+        left: 16px;
         bottom: 0;
         right: auto;
         top: auto;
         height: 1px;
-        width: 100%;
+        width: e("calc(100% - 32px)");
         background-color: @color;
         display: block;
         z-index: 15;
         .transform-origin(50% 100%);
-        .transform(scaleY(0.5));
-        html.pixel-ratio-2 &{
+        .pixel-ratio-2 &{
             .transform(scaleY(0.5));
         }
-        html.pixel-ratio-3 &{
+        .pixel-ratio-3 &{
             .transform(scaleY(0.33));
         }
     }
@@ -208,10 +206,10 @@
         display: block;
         z-index: 15;
         .transform-origin(100% 50%);
-        html.pixel-ratio-2 &{
+        .pixel-ratio-2 &{
             .transform(scaleX(0.5));
         }
-        html.pixel-ratio-3 &{
+        .pixel-ratio-3 &{
             .transform(scaleX(0.33));
         }
     }
@@ -292,7 +290,7 @@
         pointer-events: none;
         .transition(600ms);
     }
-    html:not(.watch-active-state) &:active:before, &.active-state:before {
+    :not(.watch-active-state) &:active:before, &.active-state:before {
         opacity: 1;
         .transition(150ms);
     }
