--- a/src/styles/components/icon.less
+++ b/src/styles/components/icon.less
@@ -35,6 +35,7 @@
 .@{icon-prefix}-my:before { content: "\e605"; }
 .@{icon-prefix}-delete:before { content: "\e606"; }
 .@{icon-prefix}-left:before { content: "\e607"; }
+.@{icon-prefix}-back:before { content: "\e607"; }
 .@{icon-prefix}-down:before { content: "\e608"; }
 .@{icon-prefix}-right:before { content: "\e609"; }
 .@{icon-prefix}-up:before { content: "\e60a"; }
