--- a/src/styles/core/mixins.less
+++ b/src/styles/core/mixins.less
@@ -186,6 +186,26 @@
         }
     }
 }
+.hairline(@position, @color, @full) when (@position = bottom),(@full = true) {
+    &:after {
+        content: '';
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        right: auto;
+        top: auto;
+        height: 1px;
+        width: 100%;
+        background-color: @color;
+        display: block;
+        z-index: 15;
+        .transform-origin(50% 100%);
+        .transform(scaleY(0.5));
+        .pixel-ratio-3 &{
+            .transform(scaleY(0.33));
+        }
+    }
+}
 .hairline(@position, @color) when (@position = right) {
     &:after {
         content: '';
