--- a/src/styles/components/navbar.less
+++ b/src/styles/components/navbar.less
@@ -5,41 +5,17 @@
 @toolbarColor: @titleColor;
 @toolbarLinksColor: @titleColor;
 @navbarSize: 45px;
-@toolbarSize: 48px;
-//Tab bar
+@toolbarSize: 48px; //Tab bar
 @tabbarSize: 48px;
 @tabbarLabelsSize: 72px;
 @tabbarLinksColor: rgba(255,255,255,0.7);
-@tabbarActiveLinksColor: rgba(255,255,255,1);
-// Toolbars animations
+@tabbarActiveLinksColor: rgba(255,255,255,1); // Toolbars animations
 @toolbarDuration: 300ms;
-.navbar-inner,
-.toolbar-inner {
-  position: absolute;
+.navbar {
   left: 0;
   top: 0;
-  width: 100%;
-  height: 100%;
-  box-sizing: border-box;
-  overflow: hidden;
-  padding: 0 16px;
-  .flexbox();
-  .align-items(center);
-}
-.navbar-inner {
-  .justify-content(flex-start);
-}
-.navbar {
-  .hairline(bottom, @borderColor,true);
-}
-// .toolbar-inner {
-//     .justify-content(space-between);
-// }
-// .navbar-inner.cached {
-//     display: none;
-// }
-.navbar,
-.toolbar {
+  height: @navbarSize;
+  font-size: 14px;
   width: 100%;
   box-sizing: border-box;
   position: relative;
@@ -48,60 +24,19 @@
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
   color: @toolbarColor;
-}
-// .navbar ~ .toolbar {
-//     z-index: 499;
-// }
-.navbar,
-.subnavbar,
-.toolbar {
   background: @toolbarBg;
-  // a.link {
-  //     text-decoration: none;
-  //     position: relative;
-  //     color: @toolbarLinksColor;
-  //     box-sizing: border-box;
-  //     .flexbox();
-  //     .justify-content(center);
-  //     .align-items(center);
-  //     padding: 0 16px;
-  //     min-width: 48px;
-  //     .active-highlight();
-  //     i+span, i+i, span+i, span+span {
-  //         margin-left: 8px;
-  //     }
-  // }
-  // a.icon-only {
-  //     min-width: 0;
-  //     .flex-shrink(0);
-  // }
-  // i.icon {
-  //     display: block;
-  // }
-}
-.navbar {
-  left: 0;
-  top: 0;
-  height: @navbarSize;
-  font-size: 16px;
-  // a.link {
-  //     line-height: @navbarSize;
-  //     height: @navbarSize;
-  // }
-  // .popup & {
-  //     .translate3d(0,0,0);
-  // }
+  .hairline(bottom, @borderColor,true);
   .center {
-    font-size: 16px;
+    font-size: 14px;
+    position: absolute;
+    left: 40px;
+    right: 40px;
     text-align: center;
-    margin: 0 8px;
-    position: relative;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
     line-height: @navbarSize;
     display: inline-block;
-    text-align: left;
   }
   .left,
   .right {
@@ -110,6 +45,9 @@
     .justify-content(flex-start);
     .align-items(center);
     .translate3d(0,0,0);
+    .button-icon{
+       margin-top: 6px;
+    }
   }
   .right {
     margin-left: auto;
@@ -119,167 +57,24 @@
     right: 16px;
     height: 100%;
   }
+  &.navbar-secondary{
+    .center {
+      position: relative;
+      left: auto;
+      right: auto;
+    }
+  }
 }
-// .subnavbar {
-//     height: @toolbarSize;
-//     width: 100%;
-//     position: absolute;
-//     left: 0;
-//     top: 100%;
-//     z-index: 20;
-//     box-sizing: border-box;
-//     padding: 0 16px;
-//     .flexbox();
-//     .justify-content(space-between);
-//     .align-items(center);
-//     overflow: hidden;
-//     a.link {
-//         line-height: @toolbarSize;
-//         height: @toolbarSize;
-//     }
-//     .center {
-//         line-height: @toolbarSize;
-//         &:first-child {
-//             margin-left: 56px;
-//         }
-//     }
-//     .navbar.no-border & {
-//         margin-top: 0;
-//     }
-//     .navbar-on-left &, .navbar-on-right &{
-//         pointer-events: none;
-//     }
-//     .navbar &, .page & {
-//         position: absolute;
-//     }
-//     .page > & {
-//         top: 0;
-//         margin-top: 0;
-//     }
-//     > .buttons-row {
-//         width: 100%;
-//     }
-//     .searchbar, &.searchbar {
-//         position: absolute;
-//     }
-//     &.searchbar, .searchbar {
-//         position: absolute;
-//     }
-//     .searchbar {
-//         left: 0;
-//         top: 0;
-//     }
-//     .center {
-//
-//     }
-// }
-// .toolbar {
-//     left: 0;
-//     bottom: 0;
-//     height: @toolbarSize;
-//     font-size: 14px;
-//     a.link {
-//         line-height: @toolbarSize;
-//         height: @toolbarSize;
-//     }
-//     a {
-//         .flex-shrink(1);
-//         position: relative;
-//         white-space: nowrap;
-//         text-overflow:ellipsis;
-//     }
-// }
-// Tabbar
-// .tabbar {
-//     z-index: 5001;
-//     overflow: hidden;
-//     bottom: auto;
-//     top: 0;
-//     .toolbar-inner {
-//         padding-left: 0;
-//         padding-right: 0;
-//     }
-//     a.link {
-//         line-height: 1.4;
-//     }
-//     a.tab-link, a.link {
-//         height: 100%;
-//         width: 100%;
-//         box-sizing: border-box;
-//         padding-left: 0;
-//         padding-right: 0;
-//         .flexbox();
-//         .justify-content(center);
-//         .align-items(center);
-//         -ms-flex: 1;
-//         -webkit-box-orient: vertical;
-//         -moz-box-orient: vertical;
-//         -ms-flex-direction: column;
-//         -webkit-flex-direction: column;
-//         flex-direction: column;
-//         font-size: 14px;
-//         text-transform: uppercase;
-//     }
-//     i.icon {
-//         height: 24px;
-//     }
-//     a.tab-link {
-//         .transition(300ms);
-//         overflow: hidden;
-//         color: @tabbarLinksColor;
-//         position: relative;
-//         &.active, html:not(.watch-active-state) &:active, &.active-state {
-//             color: @tabbarActiveLinksColor;
-//         }
-//     }
-//     .tab-link-highlight {
-//         position: absolute;
-//         left: 0;
-//         bottom: 0;
-//         height: 3px;
-//         background: darken(@themeColor, 15%);
-//         background: rgba(255,255,255,0.5);
-//         .transition(300ms);
-//     }
-// }
-// .tabbar-labels {
-//     height: @tabbarLabelsSize;
-//     a.tab-link, a.link {
-//         padding-top: 12px;
-//         padding-bottom: 12px;
-//         height: 100%;
-//         .justify-content(space-between);
-//     }
-//     span.tabbar-label {
-//         line-height: 1;
-//         display: block;
-//         margin: 0;
-//         margin-top: 10px;
-//         position: relative;
-//         text-overflow: ellipsis;
-//         white-space: nowrap;
-//         overflow: hidden;
-//         max-width: 100%;
-//     }
-// }
-// .tabbar-scrollable {
-//     .toolbar-inner {
-//         .justify-content(flex-start);
-//         .no-scrollbar();
-//         overflow: auto;
-//     }
-//     a.tab-link, a.link {
-//         width: auto;
-//         .flex-shrink(0);
-//         -ms-flex: 0;
-//         padding: 0 16px;
-//     }
-// }
-// .toolbar-bottom {
-//     bottom: 0;
-//     top: auto;
-//     .tab-link-highlight {
-//         bottom: auto;
-//         top: 0;
-//     }
-// }
+.navbar-inner {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+  overflow: hidden;
+  padding: 0 @blockPadding;
+  .flexbox();
+  .align-items(center);
+  .justify-content(flex-start);
+}
