--- a/src/styles/core/vars.less
+++ b/src/styles/core/vars.less
@@ -26,7 +26,8 @@
 
 @textColor:#737373;
 @titleColor:#484848;
-@borderColor:#b7b7b7;
+@borderColor:#bec0bf;
+@blockPadding:13px;
 
 // ICONFONT
 @icon-prefix: icon;
