--- a/src/styles/components/content-block.less
+++ b/src/styles/components/content-block.less
@@ -1,62 +1,60 @@
 /* === Content Block === */
 @contentBlockBorderColor: rgba(0,0,0,0.12);
 .content-block {
-    margin: 32px 0;
-    padding: 0 16px;
-    box-sizing: border-box;
+  margin: 32px 0;
+  padding: 0 16px;
+  box-sizing: border-box;
 }
 .content-block-title {
-    position: relative;
-    overflow: hidden;
-    margin: 0;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    font-size: 14px;
-    line-height: 1;
-    margin: 16px 16px 16px;
-    padding-top: 16px;
-    line-height: 16px;
-    font-weight: 500;
-    color: rgba(0,0,0,0.54);
-    + .list-block, + .content-block, +.card {
-        margin-top: 0px;
-    }
-
+  position: relative;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  font-size: 12px;
+  margin: 12px 13px;
+  padding-top: 11px;
+  line-height: 16px;
+  font-weight: 500;
+  color: #959595;
+  + .content-block,
+  + .list-block,
+  +.card {
+    margin-top: 0;
+  }
 }
 .content-block-inner {
-    padding: 16px 16px;
-    margin-left: -16px;
-    width: 100%;
-    position: relative;
-    .hairline(top, @contentBlockBorderColor);
-    .hairline(bottom, @contentBlockBorderColor);
-    >p:first-child {
-        margin-top: 0;
-    }
-    >p:last-child {
-        margin-bottom: 0;
-    }
+  padding: 16px;
+  margin-left: -16px;
+  width: 100%;
+  position: relative;
+  .hairline(top, @contentBlockBorderColor);
+  .hairline(bottom, @contentBlockBorderColor);
+  > p:first-child {
+    margin-top: 0;
+  }
+  > p:last-child {
+    margin-bottom: 0;
+  }
 }
 .content-block.inset {
-    margin-left: 16px;
-    margin-right: 16px;
-    border-radius: 7px;
-    .content-block-inner {
-        .hairline-remove(top);
-        .hairline-remove(bottom);
-        border-radius: 4px;
-    }
+  margin-left: 16px;
+  margin-right: 16px;
+  border-radius: 7px;
+  .content-block-inner {
+    .hairline-remove(top);
+    .hairline-remove(bottom);
+    border-radius: 4px;
+  }
 }
 @media all and (min-width:768px) {
-    .content-block.tablet-inset {
-        margin-left: 16px;
-        margin-right: 16px;
-        border-radius: 4px
-    }
-    
-    .content-block.tablet-inset .content-block-inner {
-    	.hairline-remove(top);
-        .hairline-remove(bottom);
-    	border-radius: 4px;
-    }
+  .content-block.tablet-inset {
+    margin-left: 16px;
+    margin-right: 16px;
+    border-radius: 4px;
+  }
+  .content-block.tablet-inset .content-block-inner {
+    .hairline-remove(top);
+    .hairline-remove(bottom);
+    border-radius: 4px;
+  }
 }
