--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -6,7 +6,6 @@
 .mobile {
   width: 360px;
   height: 640px;
-  overflow: hidden;
   border: 0 solid #36383a;
   border-width: 60px 15px 70px 15px;
   color: #474c57;
@@ -16,11 +15,51 @@
   left: 50%;
   margin-top: -370px;
   margin-left: -195px;
-  transform: scale(0.8);
   iframe {
     width: 360px;
     height: 640px;
-
     transform-origin: left top;
+  }
+  .btn {
+    position: absolute;
+    color: #FFFFFF;
+    font-size: 32px;
+    top: -56px;
+    right: -90px;
+    width: 48px;
+    height: 48px;
+    border-radius: 50%;
+    text-align: center;
+    background: #00C193;
+    line-height: 48px;
+    transition: all .5s ease-in-out;
+    transform: translateY(0);
+    border: solid 1px #00C193;
+    &:hover{
+      transform: translateY(-20px);
+      color: #00C193;
+      border-color: #00C193;
+      background: transparent;
+    }
+  }
+}
+@media only screen and (max-width: 1367px) {
+  .mobile {
+    transform: scale(0.75);
+  }
+}
+@media screen and (min-width: 1368px) and (max-width: 1599px) {
+  .mobile {
+    transform: scale(0.85);
+  }
+}
+@media screen and (min-width: 1600px) and (max-width: 1919px) {
+  .mobile {
+    transform: scale(0.9);
+  }
+}
+@media screen and (min-width:1920px) {
+  .mobile {
+    transform: scale(1);
   }
 }
