--- a/src/styles/components/navbar.less
+++ b/src/styles/components/navbar.less
@@ -37,6 +37,7 @@
     white-space: nowrap;
     line-height: @navbarSize;
     display: inline-block;
+    cursor: pointer;
   }
   .left,
   .right {
