--- a/src/styles/components/badge.less
+++ b/src/styles/components/badge.less
@@ -1,20 +1,13 @@
 @import "../core/index";
+@import "./bgColor";
 .badge {
     font-size: 10px;
     display: inline-block;
     color:#fff;
     background: #8e8e93;
-    border-radius: 3px;
+    border-radius: 2px;
     padding: 1px 6px;
     box-sizing: border-box;
     vertical-align: middle;
-}
-.icon .badge {
-    position: absolute;
-    left: 100%;
-    margin-left: -10px;
-    top: -2px;
-    font-size: 10px;
-    line-height: 1.4;
-    padding: 1px 5px;
+    .bg-color();
 }
