--- a/src/styles/components/icon.less
+++ b/src/styles/components/icon.less
@@ -23,6 +23,12 @@
     display: block;
     font-family: "iconfont" !important;
   }
+  &.icon-img{
+    width: 21px;
+    height: 21px;
+    background-size: cover;
+    border-radius: 50%;
+  }
 }
 
 .@{icon-prefix}-guanbi:before { content: "\e618"; }
