--- a/src/styles/components/lists.less
+++ b/src/styles/components/lists.less
@@ -68,6 +68,7 @@
         box-sizing:border-box;
         padding-top: 8px;
         padding-bottom: 8px;
+        min-width: 20px;
         i + i {
             margin-left: 8px;
         }
