--- a/src/styles/components/icon.less
+++ b/src/styles/components/icon.less
@@ -29,6 +29,12 @@
     background-size: cover;
     background-color: #eee;
   }
+  &.radius{
+    border-radius: 4px;
+  }
+  &.circle{
+    border-radius: 50%;
+  }
 }
 
 .@{icon-prefix}-guanbi:before { content: "\e618"; }
