--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -43,22 +43,22 @@
     }
   }
 }
-@media only screen and (max-width: 1367px) {
-  .mobile {
-    transform: scale(0.75);
-  }
-}
-@media screen and (min-width: 1368px) and (max-width: 1599px) {
+@media only screen and (max-height: 766px) {
   .mobile {
     transform: scale(0.85);
   }
 }
-@media screen and (min-width: 1600px) and (max-width: 1919px) {
+@media screen and (min-height: 767px) and (max-height: 899px) {
   .mobile {
     transform: scale(0.9);
   }
 }
-@media screen and (min-width:1920px) {
+@media screen and (min-height: 900px) and (max-height: 1079px) {
+  .mobile {
+    transform: scale(0.95);
+  }
+}
+@media screen and (min-height:1080px) {
   .mobile {
     transform: scale(1);
   }
