--- a/src/styles/components/rater.less
+++ b/src/styles/components/rater.less
@@ -5,6 +5,9 @@
   display: inline-block;
   line-height: normal;
   span{
-    color: @orange;
+    color: @gray;
+    &.active{
+      color: @orange;
+    }
   }
 }
