--- a/src/styles/components/rater.less
+++ b/src/styles/components/rater.less
@@ -4,6 +4,10 @@
   text-align: left;
   display: inline-block;
   line-height: normal;
+  font-size: 14px;
+  &.rater-small{
+    font-size: 12px;
+  }
   span{
     color: @gray;
     &.active{
