--- a/src/styles/components/lists.less
+++ b/src/styles/components/lists.less
@@ -98,6 +98,7 @@
         -webkit-box-flex:1;
         -ms-flex:1;
         min-width: 0;
+        line-height: 1.4;
         .flexbox();
         .justify-content(space-between);
         .align-items(center);
@@ -105,6 +106,7 @@
     }
     .item-title {
         min-width: 0;
+        line-height: 1.45;
         .flex-shrink(1);
         white-space: nowrap;
         position: relative;
@@ -251,7 +253,6 @@
     .item-text {
         font-size: 12px;
         color: #757575;
-        line-height: 20px;
         position: relative;
         overflow: hidden;
         max-height: 40px;
@@ -263,9 +264,9 @@
     &.media-list, li.media-item {
         .item-inner {
             display: block;
-            padding-top: 14px;
-            padding-bottom: 14px;
-            .align-self(stretch);
+            padding-top: 9px;
+            padding-bottom: 9px;
+            .align-self(center);
         }
         .item-link .item-inner {
             background: none;
@@ -278,8 +279,8 @@
             background-size: 10px 20px;
         }
         .item-media {
-            padding-top: 14px;
-            padding-bottom: 14px;
+            padding-top: 9px;
+            padding-bottom: 9px;
             .align-self(flex-start);
             img {
                 display: block;
@@ -290,8 +291,8 @@
             .justify-content(space-between);
         }
         .item-content > .item-after {
-            padding-top: 14px;
-            padding-bottom: 14px;
+            padding-top: 9px;
+            padding-bottom: 9px;
             .align-self(flex-start);
         }
     }
