--- a/src/styles/components/icon.less
+++ b/src/styles/components/icon.less
@@ -1,7 +1,5 @@
 @import "../core/index";
-
-// font-face
-// @icon-url： 字体源文件的地址
+/* === Icon === */
 @font-face {
   font-family: 'iconfont';
   src: url('@{icon-url}.eot'); /* IE9*/
