--- a/src/styles/home.less
+++ b/src/styles/home.less
@@ -3,6 +3,7 @@
   height: 100vh;
   background-color: #34495e;
   position: relative;
+
   .box {
     width: 30rem;
     position: absolute;
@@ -11,6 +12,7 @@
     left: 50%;
     margin-left: -15rem;
     height: 22.5rem;
+
     & > div {
       margin-left: auto;
       margin-right: auto;
@@ -18,32 +20,39 @@
       display: block;
     }
   }
+
   .logo {
     background-image: url("../assets/logo.png");
     width: 10rem;
     height: 12.5rem;
   }
+
   .slogan {
     background-image: url("../assets/slogan.png");
     width: 30rem;
     height: 3rem;
     margin-top: 2rem;
   }
+
   .clover {
     background-image: url("../assets/clover.png");
     width: 15rem;
     height: 5rem;
   }
 }
+
 .animated {
   animation-duration: 0.5s;
   animation-fill-mode: both;
+
   &.delay-1 {
     animation-delay: 0.1s;
   }
+
   &.delay-2 {
     animation-delay: 0.2s;
   }
+
   &.delay-3 {
     animation-delay: 0.3s;
   }
@@ -53,12 +62,46 @@
     opacity: 0;
     transform: translateY(200px);
   }
+
   100% {
     opacity: 1;
     transform: none;
   }
 }
+
 .fade-in-bottom {
   animation-name: fade-in-bottom;
   animation-timing-function: ease-out;
+}
+
+
+// scrollbar
+::-webkit-scrollbar-corner {
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-button {
+  width: 0;
+  height: 0;
+  display: none;
+}
+
+::-webkit-scrollbar-thumb {
+  width: 7px;
+  background-color: #b4babf;
+  border-radius: 7px;
+}
+
+::-webkit-scrollbar {
+  width: 7px;
+  height: 7px;
+  cursor: pointer;
+}
+
+::-webkit-scrollbar-track {
+  width: 15px;
+}
+
+::-webkit-scrollbar:hover {
+  background-color: transparent;
 }
