--- a/src/styles/home.less
+++ b/src/styles/home.less
@@ -76,32 +76,32 @@
 
 
 // scrollbar
-::-webkit-scrollbar-corner {
-  background-color: transparent;
-}
-
-::-webkit-scrollbar-button {
-  width: 0;
-  height: 0;
-  display: none;
-}
-
-::-webkit-scrollbar-thumb {
-  width: 7px;
-  background-color: #b4babf;
-  border-radius: 7px;
-}
-
-::-webkit-scrollbar {
-  width: 7px;
-  height: 7px;
-  cursor: pointer;
-}
-
-::-webkit-scrollbar-track {
-  width: 15px;
-}
-
-::-webkit-scrollbar:hover {
-  background-color: transparent;
-}
+// ::-webkit-scrollbar-corner {
+//   background-color: transparent;
+// }
+//
+// ::-webkit-scrollbar-button {
+//   width: 0;
+//   height: 0;
+//   display: none;
+// }
+//
+// ::-webkit-scrollbar-thumb {
+//   width: 7px;
+//   background-color: #b4babf;
+//   border-radius: 7px;
+// }
+//
+// ::-webkit-scrollbar {
+//   width: 7px;
+//   height: 7px;
+//   cursor: pointer;
+// }
+//
+// ::-webkit-scrollbar-track {
+//   width: 15px;
+// }
+//
+// ::-webkit-scrollbar:hover {
+//   background-color: transparent;
+// }
