--- a/src/styles/components/icon.less
+++ b/src/styles/components/icon.less
@@ -21,7 +21,7 @@
     display: block;
     font-family: "iconfont" !important;
   }
-  &.icon-img{
+  &.@{icon-prefix}-img{
     width: 21px;
     height: 21px;
     background-size: cover;
@@ -35,31 +35,47 @@
   }
 }
 
-.@{icon-prefix}-guanbi:before { content: "\e618"; }
-.@{icon-prefix}-guanbi1:before { content: "\e619"; }
-.@{icon-prefix}-guanbi2:before { content: "\e61a"; }
-.@{icon-prefix}-refresh:before { content: "\e601"; }
-.@{icon-prefix}-pinglun:before { content: "\e602"; }
-.@{icon-prefix}-accountsecuriyt:before { content: "\e603"; }
-.@{icon-prefix}-addpo:before { content: "\e604"; }
-.@{icon-prefix}-my:before { content: "\e605"; }
-.@{icon-prefix}-delete:before { content: "\e606"; }
-.@{icon-prefix}-left:before { content: "\e607"; }
-.@{icon-prefix}-back:before { content: "\e607"; }
-.@{icon-prefix}-down:before { content: "\e608"; }
-.@{icon-prefix}-right:before { content: "\e609"; }
-.@{icon-prefix}-up:before { content: "\e60a"; }
-.@{icon-prefix}-love:before { content: "\e60b"; }
-.@{icon-prefix}-star:before { content: "\e60c"; }
-.@{icon-prefix}-map:before { content: "\e60d"; }
-.@{icon-prefix}-check:before { content: "\e60f"; }
-.@{icon-prefix}-lock:before { content: "\e610"; }
-.@{icon-prefix}-share:before { content: "\e611"; }
-.@{icon-prefix}-more:before { content: "\e612"; }
-.@{icon-prefix}-microphone:before { content: "\e613"; }
-.@{icon-prefix}-send:before { content: "\e614"; }
-.@{icon-prefix}-cross:before { content: "\e615"; }
-.@{icon-prefix}-wifi01:before { content: "\e600"; }
-.@{icon-prefix}-xuan:before { content: "\e616"; }
-.@{icon-prefix}-fenlei:before { content: "\e617"; }
-.@{icon-prefix}-filter:before { content: "\e61b"; }
+
+.@{icon-prefix}-search:before { content: "\e60e"; }
+.@{icon-prefix}-reload:before { content: "\e618"; }
+.@{icon-prefix}-share:before { content: "\e619"; }
+.@{icon-prefix}-document:before { content: "\e61a"; }
+.@{icon-prefix}-file:before { content: "\e61c"; }
+.@{icon-prefix}-notice:before { content: "\e61d"; }
+.@{icon-prefix}-send:before { content: "\e61e"; }
+.@{icon-prefix}-wifi:before { content: "\e61f"; }
+.@{icon-prefix}-voice:before { content: "\e620"; }
+.@{icon-prefix}-headset:before { content: "\e621"; }
+.@{icon-prefix}-sound:before { content: "\e622"; }
+.@{icon-prefix}-unsound:before { content: "\e623"; }
+.@{icon-prefix}-comment:before { content: "\e624"; }
+.@{icon-prefix}-reply:before { content: "\e625"; }
+.@{icon-prefix}-location:before { content: "\e627"; }
+.@{icon-prefix}-left:before { content: "\e628"; }
+.@{icon-prefix}-right:before { content: "\e629"; }
+.@{icon-prefix}-top:before { content: "\e62a"; }
+.@{icon-prefix}-zhankai:before { content: "\e62b"; }
+.@{icon-prefix}-star:before { content: "\e62c"; }
+.@{icon-prefix}-check:before { content: "\e62e"; }
+
+.@{icon-prefix}-search:before { content: "\e60e"; }
+.@{icon-prefix}-reload:before { content: "\e618"; }
+.@{icon-prefix}-share:before { content: "\e619"; }
+.@{icon-prefix}-document:before { content: "\e61a"; }
+.@{icon-prefix}-file:before { content: "\e61c"; }
+.@{icon-prefix}-notice:before { content: "\e61d"; }
+.@{icon-prefix}-send:before { content: "\e61e"; }
+.@{icon-prefix}-wifi:before { content: "\e61f"; }
+.@{icon-prefix}-voice:before { content: "\e620"; }
+.@{icon-prefix}-headset:before { content: "\e621"; }
+.@{icon-prefix}-sound:before { content: "\e622"; }
+.@{icon-prefix}-unsound:before { content: "\e623"; }
+.@{icon-prefix}-comment:before { content: "\e624"; }
+.@{icon-prefix}-reply:before { content: "\e625"; }
+.@{icon-prefix}-location:before { content: "\e627"; }
+.@{icon-prefix}-left:before { content: "\e628"; }
+.@{icon-prefix}-right:before { content: "\e629"; }
+.@{icon-prefix}-up:before { content: "\e62a"; }
+.@{icon-prefix}-down:before { content: "\e62b"; }
+.@{icon-prefix}-star:before { content: "\e62c"; }
+.@{icon-prefix}-check:before { content: "\e62e"; }
