--- a/src/styles/components/button.less
+++ b/src/styles/components/button.less
@@ -122,10 +122,7 @@
    color:darken(@textColor, 5%);
    &::after{
      border-radius: 50%;
-     width: 133.33%;
-     height: 133.33%;
-     -webkit-transform: scale(0.75);
-     transform: scale(0.75);
+     border-color:#999;
    }
    &:not([disabled]):active{
      color: #fff;
